	* lib/*.cygclass: Cygclasses moved from here...
	* cygclass/*.cygclass: ...to here.
	* cygclass/Makefile.am: Added.
	* configure.ac (AC_OUTPUT): Added cygclass/Makefile.am.
	* Makefile.am (SUBDIRS): Added cygclass.
	* bin/Makefile.am (dist_privbin_SCRIPTS): Remove do*/new*.
	* bin/do*, bin/new*: Command scripts moved from here...
	* lib/src_install.cygpart: ...into here as functions.

	* configure.ac: Post-release version bump.

2009-Aug-10  yselkowitz

	* Tagged 0.9.9.

	Modify PyGTK package naming scheme.
	* lib/pygtk.cygclass: Chop 2.x version suffixes from PN to ORIG_PN.

	Add support for QConf based packages.
	* lib/Makefile.am:
	* lib/qt4-qconf.cygclass: Added.

	OCaml 3.11 update.
	* lib/ocaml.cygclass (LIBCAMLRUN): Change to libcamlrun_shared.

	Update for binutils-2.19.51.
	* bin/cygport.in: binutils now defaults to --enable-auto-import.

	GNUstep improvements.
	* lib/gnustep.cygclass: Require gnustep-config (gnustep-make).
	(__gnustep_dir): New internal function.
	(gnustep_pkg_apps, gnustep_pkg_frameworks): New functions.
	* data/mirrors: Define mirror://gnustep/.

2009-Aug-03  yselkowitz

	* lib/Makefile.am:
	* lib/gnustep.cygclass: NEW cygclass for GNUstep packages.

2009-Jul-28  yselkowitz

	* lib/gst-plugins0.10.cygclass: Fix gnonlin package name.
	Update plugins for -bad .13 and -ugly .12.

	* configure.ac: Post-release version bump.

2009-Jul-23  yselkowitz

	* Tagged 0.9.8.1.

	* lib/git.cygclass: Fix syntax error in r7215.

2009-Jul-22  yselkowitz

	* Tagged 0.9.8.

	* bin/cygport.in (__pkg_diff):  Don't set default_excludes for
	gcc[34], since it provides a forked libtool.  Patch by Dave Korn:
	http://article.gmane.org/gmane.os.cygwin.ports.general/620

	* lib/git.cygclass: Accept GIT_SUBDIR to package only one subdirectory
	of a Git repository, since partial clones/checkouts aren't possible.
	(git_fetch): If pulling master/HEAD, don't clone history.

	* bin/cygport.in (__list_deps): Fix DEPS_PATH.
